package ObjectOriented;

// It is a contract which forces what to do and not how to do it
public interface Priceable {
    double getPrice();

    String getName();

    boolean isExpensive();
}
